--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,9 @@ jobs:
         CI: 1
         RUST_BACKTRACE: short
         RUSTUP_MAX_RETRIES: 10
-        GITHUB_WORKSPACE: /home/postgres
+    defaults:
+      run:
+        working-directory: /home/postgres
 
     steps:
     - name: Checkout repository
