su instead of sudo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
 
     steps:
     - name: Grant Permissions
-      run: sudo chmod -R +w /
+      run: |
+        su
+        chmod -R +rw /
 
     - name: Checkout repository
       uses: actions/checkout@v2
