Try to use root user

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
         CI: 1
         RUST_BACKTRACE: short
         RUSTUP_MAX_RETRIES: 10
+        HOME: /home/postgres
+      options: -u root
 
     steps:
     - name: Grant Permissions
