maybe - and -l /are/ different?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Start Postgres
       run: |
-        su - postgres
+        su -l postgres
         cargo pgx start pg12
 
     - name: Run Tests
