--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@ jobs:
 
     - name: Start Postgres
       run: |
-        su -l postgres
-        cargo pgx start pg12
+        su postgres
+        HOME=/home/postgres cargo pgx start pg12
 
     - name: Run Tests
       run: HOME=/home/postgres cargo pgx test pg12
