More docker edits, absolute path

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM rust:1.48 AS pgx_builder
 
 RUN apt-get update \
-    && apt-get install -y clang libclang1 sudo \
+    && apt-get install -y clang libclang1 sudo bash \
     && rm -rf /var/lib/apt/lists/*
 
 RUN useradd -ms /bin/bash postgres
