--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         fetch-depth: 20
 
     - name: Start Postgres
-      run: sudo -u postgres -H sh -c "cargo pgx start pg12"
+      run: sudo -HEsu postgres sh -c "/usr/local/cargo/bin/cargo pgx start pg12"
 
     - name: Run Tests
       run: HOME=/home/postgres cargo pgx test pg12
