--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,14 +19,15 @@ pgx-macros = "0.1.6"
 tdigest = {git="https://github.com/WireBaron/t-digest", features = ["use_serde"]}
 bincode = "1.3.1"
 serde = "1.0"
+paste = "1.0"
 
 [dependencies.flat_serialize]
 git = "https://github.com/JLockerman/flat_serialize"
-rev = "8824b35"
+rev = "b94ec65"
 
 [dependencies.flat_serialize_macro]
 git = "https://github.com/JLockerman/flat_serialize"
-rev = "8824b35"
+rev = "b94ec65"
 
 [dev-dependencies]
 pgx-tests = "0.1.6"
