Move the extension into a subdirectory
In anticipation of auxiliary crates change the repo to use a cargo
workspace, and move the current extension into a subdirectory of the
workspace

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,5 @@ jobs:
         key: ${{ runner.os }}-cargo-build-target
 
     - name: Run Tests
-      run:  sudo -HEsu postgres sh -c "/usr/local/cargo/bin/cargo pgx test pg12"
+      run: cd extension && sudo -HEsu postgres sh -c "/usr/local/cargo/bin/cargo pgx test pg12"
 
