--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,36 +1,8 @@
-[package]
-name = "timescale_analytics"
-version = "0.0.0"
-edition = "2018"
+[workspace]
 
-[lib]
-crate-type = ["cdylib"]
-
-[features]
-default = ["pg12"]
-pg10 = ["pgx/pg10"]
-pg11 = ["pgx/pg11"]
-pg12 = ["pgx/pg12"]
-pg_test = []
-
-[dependencies]
-pgx = "0.1.6"
-pgx-macros = "0.1.6"
-tdigest = {git="https://github.com/WireBaron/t-digest", features = ["use_serde"]}
-bincode = "1.3.1"
-serde = "1.0"
-paste = "1.0"
-
-[dependencies.flat_serialize]
-git = "https://github.com/JLockerman/flat_serialize"
-rev = "b94ec65"
-
-[dependencies.flat_serialize_macro]
-git = "https://github.com/JLockerman/flat_serialize"
-rev = "b94ec65"
-
-[dev-dependencies]
-pgx-tests = "0.1.6"
+members = [
+    "extension",
+]
 
 [profile.dev]
 panic = "unwind"
