--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -16,10 +16,14 @@ pg_test = []
 [dependencies]
 pgx = "0.1.6"
 pgx-macros = "0.1.6"
+
 tdigest = {git="https://github.com/WireBaron/t-digest", features = ["use_serde"]}
+hyperloglog = {path="../crates/hyperloglog"}
+
 bincode = "1.3.1"
 serde = "1.0"
 paste = "1.0"
+
 
 [dependencies.flat_serialize]
 git = "https://github.com/JLockerman/flat_serialize"
