--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -16,7 +16,9 @@ pg_test = []
 [dependencies]
 pgx = "0.1.6"
 pgx-macros = "0.1.6"
-tdigest = {git="https://github.com/WireBaron/t-digest", features = ["use_serde"]}
+
+tdigest = {path="../crates/t-digest", features = ["use_serde"]}
+
 bincode = "1.3.1"
 serde = "1.0"
 paste = "1.0"
